[project]
name = "lated-steer-signal-filter"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "takay99", email = "167079875+takay99@users.noreply.github.com" }
]
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.3",
    "numpy>=2.2.6",
    "pandas>=2.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
